
[tool.poetry]
name = "nonebot-plugin-test"
version = "0.2.1"
description = "NoneBot tesy"
authors = ["KomoriDev <mute231010@gmail.com>"]
license = "{'text': 'MIT'}"

[tool.poetry.dependencies]
python = ">=3.10"
nonebot2 = ">=2.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
